# CADY

./: .gitignore  CMakeLists.txt  ReadMe.txt
BuildScripts/: build.bat  clean_build.bat
Config/: config.json
include/: Component.h  ComponentManager.h  ConfigLoader.h
sources/: Component.cpp  ComponentManager.cpp  ConfigLoader.cpp  main.cpp
